# jepamania

./: .gitignore  README.md  export_bundle.py  pyproject.toml  rl_loop.py
.agents/skills/codebase-auditor/: SKILL.md
.agents/skills/ml-researcher/: SKILL.md
.agents/skills/workflow-analyser/: SKILL.md
core/: config.yaml  pyproject.toml
core/bench/: benchmark_latency.py  benchmark_planners.py  plot_action_distribution.py
core/src/core/: __init__.py  actions.py  async_planner.py  config.py  dynamics.py  encoders.py  interfaces.py  loss.py  models.py  planners.py  predictors.py
train/: config.yaml  main.py  pyproject.toml
train/src/: config.py  dataloader.py  finetune.py  pretrain.py  train.py
train/src/train/: __init__.py  bootstrap.py  config.py  dataloader.py  finetune.py  loss.py  pretrain.py  priority_dataloader.py
win-client/: README.md  main.py  pyproject.toml  record.py  run.py  settings.yaml  terrain_maps.yaml
win-client/src/: agent_recorder.py  data_writer.py  env_patches.py  human_recorder.py  mpc_driver.py  settings.py  terrain_scheduler.py  utils.py
win-client/src/win_client/: __init__.py  agent_recorder.py  data_writer.py  env_patches.py  game_session.py  human_recorder.py  mpc_driver.py  settings.py  utils.py
