[project]
name = "jepamania"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "core",
    "train",
    "win-client",
]

[tool.uv.sources]
core = { workspace = true }
train = { workspace = true }
win-client = { workspace = true }

[tool.uv.workspace]
members = [
    "core",
    "win-client",
    "train",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "F722", # Forward annotation false positive from jaxtyping
    "F821", # Forward annotation false positive from jaxtyping
]
