[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Akkshay Sundara Rajan", email = "sundar57@purdue.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "equinox",
    "jax",
    "jaxlib",
    "optax",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
