[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Akkshay Sundara Rajan", email = "sundar57@purdue.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "equinox",
    "jax",
    "jaxlib",
    "jaxtyping>=0.3.11",
    "omegaconf>=2.3.1",
    "optax",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "h5py>=3.11.0",
    "matplotlib>=3.11.0",
]
