[project]
name = "train"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "core",
    "h5py",
    "jax[cuda12]; sys_platform == 'linux'",
    "wandb",
]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
